k8s-cluster/templates/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: syngx
  name: syngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: syngx
      app.kubernetes.io/name: syngx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: syngx
        app.kubernetes.io/name: syngx
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/proxyCPU: "50m"
        sidecar.istio.io/proxyMemory: "100Mi"
        sidecar.istio.io/proxyCPULimit: "50m"
        sidecar.istio.io/proxyMemoryLimit: "100Mi"
    spec:
      serviceAccount: "default"
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        capabilities:
          drop:
            - ALL
        privileged: false
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        runAsNonRoot: true
        readOnlyRootFilesystem: true
        allowPrivilegedEscalation: false
      volumes:
        name: syngx-cm-custom-vol
        configMap:
          name: syngx-cm-custom
          defaultMode: 256
          items:
            - key: nginx.conf
              path: nginx.conf
      containers:
        - name: syngx
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsUser: 10001
            runAsGroup: 10001
            fsGroup: 10001
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegedEscalation: false
          imagePullPolicy: IfNotPresent
          image: docker.io/library/nginx:1.29.6
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 4
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 4
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            failureThreshold: 60
            periodSeconds: 5
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 100Mi
          volumeMounts:
            - name: syngx-cm-custom-vol
              readOnly: true
              mountPath: /etc/nginx
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - syngx
                topologyKey: kubernetes.io/hostname
---
!!! ТУТ НУЖЕН DEPLOYMENT ingressgateway-app !!!
---
apiVersion: v1
kind: Service
metadata:
  name: syngx
  labels:
    app.kubernetes.io/instance: syngx
    app.kubernetes.io/name: syngx
spec:
  ports:
    - name: tcp-8080
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/instance: syngx
    app.kubernetes.io/name: syngx
---
apiVersion: v1
kind: Service
metadata:
  name: ingressgateway-app
  labels:
    app: ingressgateway-app
    istio: ingressgateway-app
spec:
  ports:
    - name: rest-8443
      port: 8443
      targetPort: 8443
      protocol: TCP
  selector:
    app: ingressgateway-app
    istio: ingressgateway-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/default-backend: ingressgateway-app
    nginx.ingress.kubernetes.io/secure-backends: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
  name: app-http-naebank
  labels:
    app: http-ingress
spec:
  rules:
  - host: app.naebank.k8s.ru
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ingressgateway-app
              port:
                number: 8443
